prevent improper overlap

--- a/less/g0v.less
+++ b/less/g0v.less
@@ -33,7 +33,7 @@ body {
   background: url(../imgs/binding_dark.png) #171717;
   border-bottom: 2px solid rgba(0,0,0,0);
   box-shadow: 0 2px 3px rgba(0,0,0,0.5);
-  height: 200px;
+  height: 175px;
 	margin: 0 auto;
 }
 
@@ -59,7 +59,7 @@ body {
 }
 
 #nav_bar {
-  margin: -25px auto 0;
+  margin: 0 auto;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   box-shadow: 0 0 5px rgba(0,0,0,0.6);
